# Misc

./: README.md
Bff.Server/: Bff.Server.csproj  Bff.Server.http  Program.cs  appsettings.Development.json  appsettings.json
CFSBackend/: ProjectName.sln
CFSBackend/Api/: Program.cs  ProjectName.Api.csproj  appsettings.json
CFSBackend/Api/Controllers/: AuthController.cs  DepartmentsController.cs  PositionReportsController.cs  ReportsController.cs  SystemController.cs  UsersController.cs
CFSBackend/Api/Middleware/: GlobalExceptionHandlingMiddleware.cs
CFSBackend/Application/: ProjectName.Application.csproj
CFSBackend/Application/Mapping/: MappingProfile.cs
CFSBackend/Domain/Constants/: AppConstants.cs
CFSBackend/Infrastructure/: ProjectName.Infrastructure.csproj
CFSFrontend/: package-lock.json  package.json
CFSFrontend/src/: App.tsx
CFSReact/: index.html  package-lock.json  setup.txt  tsconfig.json  vite.config.ts
CFSReact/src/: index.css
CFSSpringBoot/CFSSpringBoot/: pom.xml  setup.txt
bff-client/: index.html  package-lock.json  package.json  vite.config.js
bff-client/src/: App.jsx
experimental_agent/: README.md  experimental_mcp.py  main.py  pyproject.toml
experimental_agent/aaaagent/: __init__.py
experimental_agent/aaaagent/agents/: aaaagent.py  prompt.py  schema.py  session.py
experimental_agent/aaaagent/agents/prompts/: code_review_prompt.py  coder_prompt.py
experimental_agent/aaaagent/mcps/: hitl.py  mcp_main.py  schema.py  terminal_controller.py
experimental_agent/aaaagent/util/: call_llm.py  get_recent_reponse.py
(+187 files in other folders)
