[project]
name = "agent-card-v2-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.14.0",
    "langchain>=1.1.3",
    "langchain-anthropic>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.0.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "langsmith>=0.4.59",
    "mcp>=1.23.3",
    "pathspec>=0.12.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "tzlocal>=5.3.1",
]
